--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
   <!-- ======= Footer ======= -->
   <footer class="footer">
     
-    <a href="https://github.com/JoelFrancis1122" class="github"><i class="bx bxl-github"></i></a>
-    <a href="https://www.instagram.com/blackminez/" class="instagram"><i class="bx bxl-instagram "></i></a>
-    <a href="https://www.linkedin.com/in/joel-francis-815994282/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+    <a href="https://github.com/saez30" class="github"><i class="bx bxl-github"></i></a>
+    <a href="https://instagram.com/sae.e_?igshid=OGQ5ZDc2ODk2ZA==" class="instagram"><i class="bx bxl-instagram "></i></a>
+    <a href="https://www.linkedin.com/in/sae-krishna-b71880245/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 
    
       </div>
